--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
+/target/
+/pom.xml.tag
+/pom.xml.releaseBackup
+/pom.xml.versionsBackup
+/pom.xml.next
+/release.properties
+/dependency-reduced-pom.xml
+/buildNumber.properties
 *.class
 *~
 *.swp
@@ -13,10 +13,10 @@ buildNumber.properties
 *.sc
 .idea/
 .DS_Store
-apphome.sh
-home/
-data/
-data-*
+/apphome.sh
+/home/
+/data/
+/data-*
 
 # Eclipse
 /.project
@@ -27,4 +27,4 @@ data-*
 
 # Vagrant/Ansible
 *.retry
-.vagrant/
+/.vagrant/
