--- a/src/test/resources/debug-config/application.properties
+++ b/src/test/resources/debug-config/application.properties
@@ -8,4 +8,4 @@ bag-index.daemon.http.port=8060
 bag-index.daemon.external-base-uri=http://localhost:8060/
 
 
-bag-index.bag-store.base-dir=data/bag-store
+bag-index.bag-store.base-dirs=data/bag-store
