--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
         <dependency>
             <groupId>nl.knaw.dans.lib</groupId>
             <artifactId>dans-scala-lib</artifactId>
+            <version>1.2</version>
         </dependency>
 
         <!-- Apache Commons -->
