set jetty version to 9.x

--- a/pom.xml
+++ b/pom.xml
@@ -101,14 +101,12 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
+            <version>9.4.6.v20170531</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-servlet</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-ajp</artifactId>
+            <version>9.4.6.v20170531</version>
         </dependency>
         <dependency>
             <groupId>org.scalatra</groupId>
