--- a/src/main/ansible/vagrant.yml
+++ b/src/main/ansible/vagrant.yml
@@ -38,7 +38,7 @@
       dest: /etc/ansible/facts.d/
       mode: "u+x"
 
-  - name: reload ansible_local
+  - name: Reload ansible_local
     setup: filter=ansible_local
 
   - name: Install package
