--- a/src/main/ansible/vagrant.yml
+++ b/src/main/ansible/vagrant.yml
@@ -64,6 +64,7 @@
       dest: /srv/dans.knaw.nl/bag-store/
       mode: "0444"
       directory_mode: "0555"
+    when: ansible_local.conditions.test_data_not_exists
 
   - service:
       name: easy-bag-index
