--- a/src/test/resources/debug-config/application.properties
+++ b/src/test/resources/debug-config/application.properties
@@ -1,7 +1,7 @@
-bag-index.database.driver-class=org.sqlite.JDBC
-bag-index.database.url=jdbc:sqlite:data/bag-index.db
-#bag-index.database.username=sqlite-doesn't-need-a-username
-#bag-index.database.password=sqlite-doesn't-need-a-password
+bag-index.database.driver-class=org.hsqldb.jdbcDriver
+bag-index.database.url=jdbc:hsqldb:file:data/database/db
+#bag-index.database.username=no-username-required
+#bag-index.database.password=no-password-required
 
 bag-index.daemon.http.port=20120
 
