--- a/src/test/resources/database/db.properties
+++ b/src/test/resources/database/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Thu Dec 06 13:57:04 CET 2018
+#Thu Jul 11 10:39:35 CEST 2019
 version=2.4.1
 modified=no
 tx_timestamp=0
