--- a/pom.xml
+++ b/pom.xml
@@ -163,7 +163,7 @@
             <releases>
                 <enabled>true</enabled>
             </releases>
-            <url>http://maven.dans.knaw.nl/</url>
+            <url>http://maven.dans.knaw.nl/releases</url>
         </repository>
     </repositories>
 
@@ -173,7 +173,7 @@
             <releases>
                 <enabled>true</enabled>
             </releases>
-            <url>http://maven.dans.knaw.nl/</url>
+            <url>http://maven.dans.knaw.nl/releases</url>
         </pluginRepository>
     </pluginRepositories>
 
